--- a/src/components/Flashcard.css
+++ b/src/components/Flashcard.css
@@ -15,14 +15,14 @@
   cursor: pointer;
   box-shadow: 0 0 10px 4px #0000004d; /* Double the box shadow for an enhanced interactive effect */
 }
-.button-nextCard {
+.button-changeCard {
   padding: 1rem 2rem;
   margin: 1rem;
   background-color: #333333;
   border-radius: 10%;
   cursor: pointer;
 }
-.button-nextCard:hover {
+.button-changeCard:hover {
   outline: 2px solid lemonchiffon;
 }
 
@@ -47,6 +47,13 @@ form * {
   color: #F5F5F5;
   border-radius: 5%;
   cursor: pointer;
+}
+.button-shuffle {
+  background-color: #333333;
+  color: #F5F5F5;
+  border-radius: 5%;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
 }
 input {
   margin-right: 7px;
